<resources>
    <string name="app_name">HMSTraining</string>


    <string name="sample_description">Account Kit Demo</string>
    <string name="sample_account_description">Account Usage Process</string>
    <string name="sign_in">ID-Token Mode Signln</string>
    <string name="sign_out">SignOut</string>
    <string name="revokeAccess">AuthorizationCode Mode Signln</string>
    <string name="silent_sign_in">Silent SignIn</string>
    <string name="cancel_authorization">Cancel Authorization</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="setting_button">Settings</string>
    <string name="next_button">Next</string>
    <string name="post_score_button">Post Score</string>
    <string name="save_setting_button">Save</string>
    <string name="q1">The largest planet in the solar system is Jupiter</string>
    <string name="q2">The first Olympic Games were held in Athens, Greece</string>
    <string name="q3">The violin has 6 strings</string>
    <string name="q4">Flying bats belong to birds</string>
    <string name="q5">Sound spreads faster in the water than in the air</string>
    <string name="wrong_answer">The answer is wrong.</string>
    <string name="correct_answer">The answer is correct.</string>
</resources>