<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        tools:context="com.dtse.huawei.demo.hms.training">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/sample_account_description"
            android:textSize="16sp" />


        <Button
            android:id="@+id/account_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/emui_functional_blue"
            android:padding="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/account_signInCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/emui_functional_blue"
            android:padding="5dp"
            android:text="@string/revokeAccess"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <Button
            android:id="@+id/account_silent_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/emui_functional_blue"
            android:padding="5dp"
            android:text="@string/silent_sign_in"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/account_signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/emui_functional_blue"
            android:padding="5dp"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/cancel_authorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/emui_functional_blue"
            android:padding="5dp"
            android:text="@string/cancel_authorization"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <FrameLayout
            android:id="@+id/framelog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp" />
    </LinearLayout>
</ScrollView>